<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6FFFFFF"
    tools:context=".Save_Contact">

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_view_white"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingLeft="12dp"
        android:textColor="#000000"
        android:textColorHint="#8D8C8C"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_view_white"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="textPersonName"
        android:paddingLeft="12dp"
        android:textColor="#000000"
        android:textColorHint="#929292"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="#424242"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="8"
        android:text="@string/save_contact"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:backgroundTint="#198AD8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_image" />

</androidx.constraintlayout.widget.ConstraintLayout>